fix alignment of sidebar note buttons

--- a/exercises/resources/styles/variables.scss
+++ b/exercises/resources/styles/variables.scss
@@ -35,6 +35,7 @@ $reference-book-page-width: 1000px;
 $reference-book-collapse-width: 85%;
 
 $book-content-collapse-breakpoint: 1199px;
+$mobile-breakpoint: 600px;
 $book-content-narrow-horizontal-padding: 24px;
 
 // Async
