--- a/tutor/resources/styles/components/notes/note.scss
+++ b/tutor/resources/styles/components/notes/note.scss
@@ -202,6 +202,16 @@
     @media print {
       display: none;
     }
+    @media screen and ( max-width: $book-content-collapse-breakpoint ){
+      font-size: 2rem;
+      z-index: 1;
+      right: -1.2rem;
+    }
+    @media screen and ( max-width: $mobile-breakpoint ){
+      font-size: 1.5rem;
+      z-index: 1;
+      right: -0.5rem;
+    }
   }
 
   .centered-content {
