--- a/tutor/resources/styles/variables.scss
+++ b/tutor/resources/styles/variables.scss
@@ -84,6 +84,7 @@ $book-menu-width: 300px;
 $reference-book-collapse-width: 85%;
 
 $book-content-collapse-breakpoint: 1199px;
+$mobile-breakpoint: 600px;
 $book-content-narrow-horizontal-padding: 24px;
 $book-content-vertical-image-margin: 1rem;
 
